--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
                 <a href="kaim_zad5_3.html" target="strony">Zad 5_3</a>
                 <br>
                 <a href="kaim_zad5_4.html" target="strony">Zad 5_4</a>
+                <br>
+                <a href="kaim_zad6.html" target="strony">Zad 6</a>
             </td>
             <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
             </td>
